--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rimraf dist && tsc"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
